Ajout de la configuration de Git

--- a/git.d/.gitconfig
+++ b/git.d/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = william66750@gmail.com
-    name = William VINCENT
+    email = REPLACEMAIL 
+    name = REPLACENAME
 [color]
     ui = always
     branch = always
